--- a/cpa/templates/secretaire.html
+++ b/cpa/templates/secretaire.html
@@ -6,14 +6,7 @@
 <title>Dossier Information Form</title>
 <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <style>
-    /* Reset CSS */
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
+   body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background-color: #f4f4f9; /* Light grey background */
         margin: 0;
@@ -211,7 +204,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="{{ url_for('static', filename='cpa.png') }}" alt="logo">
+        <img src="{{ url_for('static', filename='cropped.png') }}" alt="logo">
         <a href="{{ url_for('envoiversagence') }}">
             <i class='bx bxs-send icon'></i> Envoi</a>
     </div>
@@ -370,4 +363,3 @@
     </script>
 </body>
 </html>
-
