--- a/cpa/templates/index.html
+++ b/cpa/templates/index.html
@@ -158,7 +158,7 @@
     </div>
     <form action="{{ url_for('login') }}" method="POST">
         
-       <img src="{{ url_for('static', filename='cropped.png') }}" alt="logo">
+       <img src="{{ url_for('static', filename='cpa.png') }}" alt="logo">
         <h2  > Log in Here</h2>
         <label for="username">Folio</label>
         <input type="text" placeholder="Folio" id="username" name="username" required>
