--- a/cpa/templates/envoiversag.html
+++ b/cpa/templates/envoiversag.html
@@ -53,17 +53,18 @@
     border: 2px solid #d1d1d1; /* Darker grey border to enhance visibility */
     border-radius: 8px;
     padding: 30px;
-    width: 90%%;
+    width: 90%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     margin-top: 80px; /* Add margin at the top to avoid overlapping with the fixed header */
 }
+
 form{
     background-color: #ffffff; /* White background */
     border: 1px solid #d1d1d1 ; /* Darker grey border to enhance visibility */
     border-radius: 8px;  
     border-radius: 8px;
     padding: 30px;
-    width: 90%%;
+    width: 90%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     margin-top:80px; /* Add margin at the top to avoid overlapping with the fixed header */
 }
@@ -142,7 +143,7 @@ a:hover {
 </head>
 <body>
     <div class="header">
-        <img src="{{ url_for('static', filename='cropped.png') }}" alt="logo">
+        <img src="{{ url_for('static', filename='cpa.jpeg') }}" alt="logo">
         <a href="{{ url_for('secretaire') }}">
             <i class='bx bx-calendar icon'></i>Réception</a>
     </div>
