--- a/cpa/templates/secretaire.html
+++ b/cpa/templates/secretaire.html
@@ -21,6 +21,7 @@
             grid-template-columns: 1fr 1fr;
             padding: 20px;
             box-sizing: border-box;
+            gap: 100px;
         }
         .form-half {
             width: 90%;
@@ -132,13 +133,50 @@
             display: block;
             margin: 0 auto;
             }
+
+        
+.header {
+    width: 100%;
+    background-color: #ffffff; /* White background */
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add shadow */
+}
+
+.header img {
+    height: 50px; /* Adjust height as needed */
+    margin-left: 20px; /* Add margin to the left of the logo */
+}
+
+.header a {
+    color: #0056b3; /* Blue text color */
+    text-decoration: none;
+    margin-right: 20px; /* Add margin to the right of the links */
+    padding: 10px;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.header a:hover {
+    color: #003d80; /* Darker blue on hover */
+}
     </style>
 </head>
 <body>
+    <div class="header">
+        <img src="{{ url_for('static', filename='cpa.jpeg') }}" alt="logo">
+        <a href="{{ url_for('envoiversagence') }}">
+            <i class='bx bx-calendar icon'></i>Envoi</a>
+    </div>
     <div class="container">
         <div class="form-half">
             <form method="POST" action="/secretaire">
-                <img src="{{ url_for('static', filename='cpa.jpeg') }}" alt="logo" class="small-logo">
+                <!-- <img src="{{ url_for('static', filename='cpa.jpeg') }}" alt="logo" class="small-logo"> -->
                 <h2>Dossier Information Form</h2>
                 <label for="date_reception">Date de récéption:</label>
                 <input type="date" id="date_reception" name="date_reception">
@@ -183,7 +221,7 @@
         </div>
     </div>
     <div class="container2">
-        <h2>Today's Dossiers</h2>
+        <h2>Les dossiers d'aujourd'hui</h2>
         <table>
             <thead>
                 <tr>
@@ -210,7 +248,7 @@
             </tbody>
         </table>
         <a href="{{ url_for('download_excel') }}">
-            <button>Print</button>
+            <input type="submit" value="Imprimer">
         </a>
     </div>
     <script>
